--- a/neonLove/style.css
+++ b/neonLove/style.css
@@ -12,6 +12,33 @@ body {
     background-color: #CCC;
     font-family: 'Charmonman', cursive;
     color: black;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+header {
+    text-align: center;
+    background-color: #36648B;
+    color: white;
+}
+
+article {
+    display: inline-block;
+    background-color: GoldenRod;
+}
+
+.leftBar {
+    display: inline-block;
+    float: left;
+    background: #400000;
+    color: white;
+}
+
+.leftBar > nav > span {
+    display: block;
 }
 
 .footer {
@@ -21,6 +48,8 @@ body {
 
 .container {
     background-color: white;
+    position: relative;
+    top: 20%;
 }
 
 /* Media Queries */
@@ -41,6 +70,13 @@ body {
 @media (min-width: 961px) and (max-width: 1340px){
     .container {
         width: 70%;
+        margin: auto;
+    }
+}
+
+@media (min-width: 1341px) {
+    .container {
+        width: 50%;
         margin: auto;
     }
 }
