--- a/portfolioRedesign/css/main.css
+++ b/portfolioRedesign/css/main.css
@@ -23,7 +23,6 @@ body {
     /*overflow: hidden;*/
     width: 100%;
     height: 100%;
-    background-color: #DDD;
     position: absolute;
     top: 0;
     left: 0;
@@ -39,12 +38,10 @@ nav {
     left: 0;
     width: 100%;
     height: auto;
-    background-color: #00688B;
 }
 
 nav > a {
     margin: 20px;
-    color: white;
     font-size: 1.5em;
     text-decoration: none;
 }
@@ -52,14 +49,22 @@ nav > a {
 #es_logo > img {
     height: 1em;
     position: absolute;
-    bottom: 5px;
+    bottom: 0px;
     left: 0;
+}
+
+.underline { 
+    width: 70%;
+    margin: auto;
+    display:block;
+    border:none;
+    height:1px;
+    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(#000), to(#fff));
 }
 
 scroll-container {
   display: block;
   position: absolute;
-  color: white;
   top: 0;
   left: 0;
   width: 100%;
@@ -78,11 +83,16 @@ scroll-page {
   overflow: hidden;
 }
 
+.pageName {
+    text-align: center;
+    font-size: 2em;
+    margin-top: 20px;
+}
+
 #plaque {
     width: 80%;
     height: 60%;
     margin: 50px auto;
-    /*background-color: #555;*/
     /*white-space: nowrap;*/
     text-align: center;
 }
@@ -104,7 +114,6 @@ scroll-page {
     height: 200px;
     background-color: #222;
     border-radius: 50%;
-    border: 2px solid white;
     margin: auto;
 }
 
@@ -113,24 +122,71 @@ scroll-page {
 }
 
 #home {
-    background-color: #333;
 }
 
 #resume {
-    background-color: #B78727;
+    height: auto;
 }
 
 #about {
-    background-color: #4A0000;
+    
 }
 
 #contact {
-    background-color: #00688B;
     opacity: 0.9;
     text-align: center;
 }
 
+#interactiveChart {
+    display: inline-block;
+    width: 100%;
+    height: 60%;
+}
 
+#interactiveChart > iframe {
+    width: 100%;
+    height: 100%;
+}
+
+#barInstructions {
+    font-size: 1.2em;
+    color: GoldenRod;
+}
+
+#barInstructions > span {
+    
+}
+
+#barInstructions > span:hover {
+    color: GoldenRod;
+}
+
+#leftSide {
+    width: 100%;
+    height: 30%;
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    text-align: center;
+    
+}
+
+#rightSide {
+    width: 49%;
+    height: 90%;
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+}
+
+#footer {
+    height: auto;
+    padding: 0;
+    margin: 0;
+    white-space: nowrap;
+    font-size: .8em;
+    text-align: center;
+}
 
 .socialMedia {
     z-index: 1;
@@ -149,7 +205,11 @@ scroll-page {
     opacity: 1;
 }
 
-.socialMedia > i {
+.socialMedia > a {
+    text-decoration: none;
+}
+
+.socialMedia > a > i {
     position: absolute;
     top: 12px;
     left: 13px;
@@ -218,7 +278,6 @@ input[name="email"] {
     margin-top: 20px;
     border-radius: 25px;
     text-align: center;
-    color: black;
 }
 
 input[type="textarea"] { 
@@ -258,8 +317,7 @@ input[type="textarea"] {
     z-index: 1;
     bottom: 0;
     left: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
+    opacity: 0.9;
     overflow-x: hidden;
     transition: 0.5s;
 }
@@ -298,10 +356,10 @@ form > span {
     padding: 0;
 }
 
+
+
 span > input[type="submit"] {
     width: 30%;
-    background-color: #00688B;
-    color: WhiteSmoke;
     font-size: 1.3em;
     border: 2px solid WhiteSmoke;
     margin-top: 20px;
@@ -311,10 +369,7 @@ span > input[type="submit"] {
 
 span > input[type="button"] {
     width: 30%;
-    background-color: #4A0000;
-    color: WhiteSmoke;
     font-size: 1.3em;
-    border: 2px solid WhiteSmoke;
     margin-top: 20px;
     border-radius: 25px;
     text-align: center;
