--- a/portfolioRedesign/sidebar/style.css
+++ b/portfolioRedesign/sidebar/style.css
@@ -22,7 +22,7 @@ body {
     margin: 0;
     font-family: barlow, sans-serif;
     color: #242428;
-    background-color: #FFF;
+    background-color: #777;
 }
 
 a,
