--- a/portfolioRedesign/css/main.css
+++ b/portfolioRedesign/css/main.css
@@ -203,6 +203,26 @@ scroll-page {
     background: black;
 }
 
+#spacer {
+    height: auto;
+    background-color: #555;
+    padding: 0;
+    margin: 0;
+}
+
+#spacer > p {
+    padding: 0;
+    margin: 0;
+    font-size: 1.2em;
+    text-align: center;
+}
+
+#spacer > p > a {
+    color: white;
+    text-decoration: none;
+}
+
+
 .socialMedia {
     z-index: 1;
     position: fixed;
@@ -410,8 +430,21 @@ span > input[type="button"] {
 }
 
 @media (min-width: 1300px) {
+    
+    html,
+    body {
+        background-color: #999;
+    }
+    
     scroll-container{
         width: 60%;
+        position: relative;
         margin: auto;
     }
+    
+    .overlay-content{
+        width: 50%;
+        margin: auto;
+    }
+    
 }
